--- a/index.html
+++ b/index.html
@@ -6,27 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jesus Abdelnour" />
     <meta name="description" content="Proyecto Portafolio de Jesus Abdelnour" />
-    <meta name="keywords" content="HTML, CSS, JavaScript, Java, Spring Boot, Angular, MySQL"/>
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Java, Spring Boot, Angular, MySQL"
+    />
     <!--Favicon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="imagenes/favicon-16x16.png"/>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imagenes/favicon-16x16.png"
+    />
     <!--titulo-->
     <title>Proyecto Portafolio | Desarrollo Web Front-End JAVCode</title>
     <!--Bootstrap-->
     <link
-    
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"/>
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <!--CSS-->
     <link href="style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Barra de navegacion-->
@@ -69,7 +80,12 @@
               <a class="nav-link" href="#testimonios">Testimonios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index1.html" target="_blank">Curriculum</a>
+              <a
+                class="nav-link"
+                href="https://github.com/JAVDev444/CurriculumPDF/blob/main/Jesus%20Abdelnour.pdf"
+                target="_blank"
+                >Curriculum</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contacto">Contacto</a>
@@ -147,7 +163,7 @@
           Operaciones de Sistemas. Me apasiona la Tecnologia, y disfruto
           trabajando en entornos desafiantes y dinámicos que me permiten
           aprender y crecer profesionalmente. Mi enfoque principal es poder
-          emplearme como Programador jr en esta nueva etapa de mi vida laboral,
+          emplearme como Programador en esta nueva etapa de mi vida laboral,
           para esta nueva meta me he preparado realizando cursos y practicas en
           Java, MySQL y diferentes Frameworks como Struts, Hibernate, Spring
           Boot y Angular. Estoy comprometido con esta nueva meta. Mi habilidad
@@ -166,8 +182,9 @@
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Back-End</p>
             <p>
-              Soy un apasionado estudiante de programación Java, en constante aprendizaje 
-              y enfocado en adquirir experiencia en desarrollo de software.
+              Soy un apasionado estudiante de programación Java, en constante
+              aprendizaje y enfocado en adquirir experiencia en desarrollo de
+              software.
             </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
@@ -184,8 +201,9 @@
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Articulos</p>
             <p>
-              Exploro y comparto conocimientos como programador fullstack, cubriendo 
-              temas relevantes sobre desarrollo web, tecnologías y mejores prácticas.
+              Exploro y comparto conocimientos como programador fullstack,
+              cubriendo temas relevantes sobre desarrollo web, tecnologías y
+              mejores prácticas.
             </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Escribir</span>
@@ -198,8 +216,8 @@
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Estudiante</p>
             <p>
-              Soy un estudiante apasionado que busca dominar Python, AWS y Scrum 
-              para desarrollar soluciones eficientes y escalables en tecnología 
+              Soy un estudiante apasionado que busca dominar Python, AWS y Scrum
+              para desarrollar soluciones eficientes y escalables en tecnología
               utilizando metodologia agil.
             </p>
             <div class="badges-contenedor">
@@ -212,7 +230,10 @@
       </div>
     </section>
     <!--Proyectos-->
-    <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
+    <section
+      id="proyectos"
+      class="proyectos-recientes seccion-clara d-flex flex-column"
+    >
       <h2 class="seccion-titulo texto-negro">Mis Proyectos recientes</h2>
       <h3 class="seccion-descripcion">
         Estos son algunos proyectos que he creado recientemente
@@ -444,7 +465,8 @@
             rel="noopener noreferrer"
           >
             <li class="list-group-item">
-              Rendimiento de VS Code: Cómo optimizar Visual Studio Code y elegir las "mejores" extensiones
+              Rendimiento de VS Code: Cómo optimizar Visual Studio Code y elegir
+              las "mejores" extensiones
             </li>
           </a>
         </ul>
@@ -499,8 +521,9 @@
                 alt="foto de Jacmilet"
               />
               <p class="testimonio-texto">
-                La creación de mi página web fue una experiencia increíble; Jesus 
-                entregó un diseño moderno y funcional que superó mis expectativas.
+                La creación de mi página web fue una experiencia increíble;
+                Jesus entregó un diseño moderno y funcional que superó mis
+                expectativas.
               </p>
               <div class="testimonio-info">
                 <p class="cliente">Jacmilet</p>
@@ -516,8 +539,9 @@
                 alt="foto de Jesus"
               />
               <p class="testimonio-texto">
-                El haber creado este Portafolio me llena de satisfaccion ya que era una 
-                de las primeras metas despues de finalizar los cursos de programacion.
+                El haber creado este Portafolio me llena de satisfaccion ya que
+                era una de las primeras metas despues de finalizar los cursos de
+                programacion.
               </p>
               <div class="testimonio-info">
                 <p class="cliente">Jesus</p>
@@ -572,10 +596,15 @@
     </section>
     <!--Pie de pagina (Footer)-->
     <footer
-      class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-      <img class="footer-logo" src="imagenes/favicon-16x16.png" alt="logo del portafolio">
+      class="seccion-oscura d-flex flex-column align-items-center justify-content-center"
+    >
+      <img
+        class="footer-logo"
+        src="imagenes/favicon-16x16.png"
+        alt="logo del portafolio"
+      />
       <p class="footer-texto text-center">
-        Aprendo y creo todos los dias.<br>
+        Aprendo y creo todos los dias.<br />
         Creemos un proyecto juntos
       </p>
       <div
