--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           height="150 px"
         />
         <h1>Hola, soy Jesus Abdelnour</h1>
-        <h2>Jr Java Developer Back-End</h2>
+        <h2>Java Developer Back-End</h2>
       </div>
       <div class="hero-inferior">
         <img
